docs(globalStyling): fix pre tags text overflow

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -113,3 +113,7 @@ a[href^="file/lib/"] {
 .center {
   text-align: center;
 }
+
+pre {
+  white-space: pre-wrap;
+}
